# cashortrade-search

./: .gitignore  CLAUDE.md  LICENSE  README.md  cot.py  pyproject.toml  tickets.py
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-16-multi-event-html-output.md  2026-07-14-portfolio-packaging-and-docs.md  2026-07-14-testing-linting-and-ci.md  2026-07-22-per-section-max-row.md
docs/superpowers/specs/: 2026-04-16-multi-event-html-output-design.md  2026-07-14-portfolio-packaging-and-docs-design.md  2026-07-14-testing-linting-and-ci-design.md  2026-07-22-per-section-max-row-design.md
scripts/: gen_demo_html.py
tests/: test_tickets.py
