[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cashortrade-search"
version = "0.1.0"
description = "Search, filter, and sort ticket listings from CashorTrade.org across one or more events — sortable HTML output or a rich terminal view."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dean Hicks" }]
dependencies = [
    "requests>=2.31",
    "rich>=13.0",
]

[project.scripts]
cashortrade-search = "tickets:main"

[tool.setuptools]
py-modules = ["tickets"]
