[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cashortrade-tickets"
version = "0.1.0"
description = "Search, filter, and sort ticket listings from cashortrade.org"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "rich",
]

[project.scripts]
tickets = "tickets:main"

[tool.setuptools]
py-modules = ["tickets"]
