[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cashortrade-search"
version = "0.1.0"
description = "Search, filter, and sort ticket listings from CashorTrade.org across one or more events — sortable HTML output or a rich terminal view."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dean Hicks" }]
dependencies = [
    "requests>=2.31",
    "rich>=13.0",
]

[project.scripts]
cashortrade-search = "tickets:main"

[tool.setuptools]
py-modules = ["tickets"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6,<0.16",
    "mypy>=1.10",
    "types-requests>=2.31",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# E741 (ambiguous variable name) is disabled: the codebase consistently uses
# `l` as the loop variable for "listing" in ~25 places. Renaming all of them
# is a separate refactor, not part of adding tooling, and is out of scope here.
ignore = ["E741"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
